test/end-to-end/compile-errors/trusted-unnecessary.crow
main void()
	()

f nat*() unsafe
	trusted null

f nat*()
	trusted trusted null

f nat()
	# testing twice to verify that we reset 'usedTrusted' after each 'trusted'
	_ nat = trusted 0
	trusted 0
